# lineagekit

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: bench.py  test_lineage.py  test_runs.py
lineagekit/: __init__.py  ast_assist.py  cli.py  dataset.py  impact.py  lineage_tracker.py  sklearn_helpers.py  store.py  transform.py
lineagekit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
lineagekit/ui/: __init__.py  streamlit_app.py
